--- a/aulas-react/src/estilos/Lanche.css
+++ b/aulas-react/src/estilos/Lanche.css
@@ -4,12 +4,15 @@
     color: #fa0;
 }
 .conteiner{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
     padding: 30px;
     background-color: #333;
     color: #fff;
     border-radius: 5px;
     margin: 5px;
-    flex: 0 0 300px;
+    flex: 0 0 290px;
 }
 .conteiner p{
     font-size: 1.3em;
