--- a/aulas-react/src/estilos/aula13.css
+++ b/aulas-react/src/estilos/aula13.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 #root{
-    padding: 40px;
+    padding: 50px;
     width: 100%;
     height: 100%;
 }
@@ -44,6 +44,7 @@ input{
     background-color: #ccc;
     border-radius: 5px 0px 0px 5px;
     width: 35%;
+    height: auto;
 }
 .formulario h2{
     text-align: center;
@@ -86,11 +87,13 @@ input{
     .formulario{
         width: 50%;
     }
+}
+@media screen and (max-width: 725px) {
     .sectionLanches{
         flex-direction: column;
     }
 }
-@media screen and (max-width: 700px){
+@media screen and (max-width: 690px){
     .conteinerFormOpcoes{
         flex-flow: column nowrap;
     }
