--- a/aulas-react/src/estilos/div-centralizada.css
+++ b/aulas-react/src/estilos/div-centralizada.css
@@ -1,8 +1,9 @@
 .div-centralizada{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    text-align: left;
     height: 100%;
     width: 100%;
 }
